--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,30 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>A Slick2d game</name>
+	<name>Counterfeiter</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<main.class>com.edwinhollen.counterfeiter.Game</main.class>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.slick2d</groupId>
 			<artifactId>slick2d-core</artifactId>
 			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.edwinhollen</groupId>
+			<artifactId>Excess</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
 
